refactor: update package name from @sohanemon/core to @sohanscript/utils refactor(README.md): update installation and import instructions refactor(package.json): change package name to @sohanscript/utils refactor(b

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sohanemon/core",
+  "name": "@sohanscript/utils",
   "version": "1.0.0",
   "author": "Sohan Emon <sohanemon@outlook.com>",
   "description": "Core utilities for JavaScript/TypeScript projects, including React Native",
